# blitzreader_backend

./: .env  Cargo.toml
migrations/2021_categories/: down.sql  up.sql
migrations/create_mangas/: down.sql  up.sql
migrations/user_catgorization/: up.sql
src/: api.rs  db.rs  main.rs  model.rs  schema.rs
templates/: index.html.tera
