[package]
authors = [""]
name = "blitzreader"
version = "0.0.1"
edition = "2018"

[dependencies]
ntex = "0.3"
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
ntex-session =  { git = "https://github.com/ntex-rs/ntex-extras.git" }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1.4.4"
